@@ -6123,6 +6123,7 @@ function(db, files)
     ## we just have a stop list here.
     common_names <- c("pkg", "pkgName", "package", "pos")
 
+    parse_errors <-
     bad_exprs <- character()
     bad_imports <- character()
     bad_data <- character()
@@ -6188,9 +6189,12 @@ function(db, files)
                          ## so ignore 'invalid multibyte character' errors.
                          msg <- .massage_file_parse_error_message(conditionMessage(e))
                          if(!startsWith(msg, "invalid multibyte character"))
+                         {
+                             parse_errors <<- c(parse_errors, f)
                              warning(gettextf("parse error in file '%s':\n%s",
                                               f, msg),
                                      domain = NA, call. = FALSE)
+                         }
                      })
         }
     } else {
@@ -6209,7 +6213,9 @@ function(db, files)
     res <- list(others = unique(bad_exprs),
                 imports = unique(bad_imports),
                 data = unique(bad_data),
-                methods_message = "")
+                methods_message = ""
+              , parse_errors = unique(parse_errors)
+    	    )
     class(res) <- "check_packages_used"
     res
 }
@@ -6252,7 +6258,12 @@ function(package, dir, lib.loc = NULL)
         on.exit(close(con), add = TRUE)
     } else con <- file
 
+    res <-
     .check_packages_used_helper(db, con)
+    ## Save full version of Ex.R to parent dir if it has parse errors
+    if(length(res$parse_errors))
+    	file.copy(file, file.path(dir, ".."))
+    res
 }
 
 
